--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="button">Создать пост</button>
     <div id="post"></div>
     <div class="container"></div>
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
     <script src="post.js"></script>
 
 </body>
